    - 全角・半角変換をサポート。
    - リソースデータのモダン化。
- 2023-04-01 Ver.0.9.8.1
    - バージョン情報がIMEとしては異常だったのを修正。
- 2023-04-05 Ver.0.9.8.2
    - ユーザー辞書を実装。
    - 状態ウィンドウの右クリックからプロパティを開けるように。
- 2023-04-10 Ver.0.9.8.3
    - 人名・地名辞書を有効に。
    - 半角変換が可能に。
    - 句読点「、」「。」を「，」「．」にする設定を追加。
    - 郵便番号変換を可能に。
    - 「全角英数を使わない」設定を追加。
    - 未確定文字列ウィンドウと候補ウィンドウの描画方法を改良。
    - MZIMEJA_DEBUG_OUTPUTをデフォルトでOFFに。
    - 候補ウィンドウのフォントを修正。
- 2023-04-12 Ver.0.9.8.4
    - MZIMEJA_DEBUG_OUTPUTを廃止。デバッグ版／リリース版の運営を標準化。
    - ショートカットキー（Ctrl+C、Ctrl+V など）の処理を修正。
    - ソースコードをすべてUTF-8にする。
    - URLを更新。
    - 一部の郵便番号変換が出来なかったのを修正。
    - 変換精度を若干高める。変換時のフリーズをいくつか修正。
    - 状態ウィンドウの右クリックメニューの位置を改善。
- 2023-04-15 Ver.0.9.8.5
    - 候補ウィンドウの位置の決め方を改良。
    - ローマ字入力で最後に入力したのが「n」だったら「ん」にする。
    - カ変動詞の活用を修正。
    - 辞書を増強。変換精度の向上。
- 2023-04-23 Ver.0.9.8.6
    - 五段動詞の活用を修正。
    - 辞書を増強。変換精度の向上。
    - ユーザー辞書の不具合を修正。
    - IME本体とテストコードを分離。
    - 変換アルゴリズムとしてコスト最小法を採用。
- 2023-05-03 Ver.0.9.8.7
    - 辞書を増強。変換精度の向上。
- 2023-12-04 Ver.0.9.8.8
    - 他のIMEを消さないようにした。
    - 基本辞書をbasic.dat/basic.dicに改名。
- 2023-12-23 Ver.0.9.8.9
    - ビルド方法を間違えたので再構築。
- 2025-05-13 Ver.0.9.9.0
    - 候補ウィンドウのヌルチェックでちらつきをなくした。
- 2025-06-01 Ver.0.9.9.1
    - HKL を E0E20411 に変更。
    - 「低レベル セットアップ」をサポート。これにより Windows 2000 サポートの復活。
    - システム ペン アイコンをサポート。
    - インストーラをさらに改良。
- 2025-08-06 Ver.0.9.9.3
    - ツールチップにIMEの状態表示。
    - 「全般設定」ダイアログを改良。
    - 「ユーザー辞書」ダイアログを改良。
    - 英語リソースを追加。
    - システム ペン アイコンの左クリックメニューを追加。
    - 全角スペース禁止設定が可能に。
    - キー入力ルーチンを修正。
    - バージョン番号を修正。
    - 辞書を増強。
- 2025-08-08 Ver.1.0.0.0
    - 64ビットをサポート。Windows Vista/7/10/11をサポート。
    - 辞書の仕様変更。
    - 人工知能を用いてさらに辞書増強。
    - 「全角カタカナを優先」「半角カナを優先」設定を追加。
    - 長音「ー」を「～」に変換する機能を追加。
    - HKLを固定値から自由な値に変更。
    - アンインストーラを修正。
    - デジタル署名を追加。
- 2025-09-01 Ver.1.0.0.1
    - READMEの記述を修正。
    - 低レベルのセットアップ ファイルを改名。
    - 辞書を増強。
- 2026-XX-YY Ver.1.0.0.2
    - キーリピートの余分な処理を削除。
    - 英語やドイツ語の Alt+~ をサポート。
    - HISTORY.txtをChangeLog.txtに改名。
    - IME_PROP_KBD_CHAR_FIRSTフラグを取り除く。